# ChangeLog for sys-fs/ntfs3g
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/ntfs3g/ChangeLog,v 1.26 2007/03/29 08:04:52 corsair Exp $

  29 Mar 2007; Markus Rothe <corsair@gentoo.org> ntfs3g-1.0.ebuild:
  Stable on ppc64; bug #172537

  29 Mar 2007; Christian Faulhammer <opfer@gentoo.org> ntfs3g-1.0.ebuild:
  stable x86, bug 172537

  24 Mar 2007; Markus Rothe <corsair@gentoo.org> ntfs3g-1.0.ebuild:
  Added ~ppc64

*ntfs3g-1.0 (21 Feb 2007)

  21 Feb 2007; Patrick McLean <chutzpah@gentoo.org>
  -ntfs3g-0.20070102.ebuild, -ntfs3g-0.20070116.ebuild,
  -ntfs3g-0.20070118.ebuild, +ntfs3g-1.0.ebuild:
  Version bump. Clean out some old versions.

*ntfs3g-0.20070207_rc1 (07 Feb 2007)

  07 Feb 2007; Patrick McLean <chutzpah@gentoo.org>
  +ntfs3g-0.20070207_rc1.ebuild:
  Version bump.

  18 Jan 2007; Patrick McLean <chutzpah@gentoo.org>
  ntfs3g-0.20070118.ebuild:
  Add "suid" USE flag to install the ntfs-3g binary SUID root, to allow users
  to mount ntfs-3g filesystems.

*ntfs3g-0.20070118 (18 Jan 2007)

  18 Jan 2007; Patrick McLean <chutzpah@gentoo.org>
  -ntfs3g-0.20061212.ebuild, +ntfs3g-0.20070118.ebuild:
  Version bump, remove FUSE kernel module check as it now works with both the
  in-kernel FUSE module and the FUSE package one. Clean out older version.

*ntfs3g-0.20070116 (16 Jan 2007)

  16 Jan 2007; Patrick McLean <chutzpah@gentoo.org>
  +ntfs3g-0.20070116.ebuild:
  Version bump.

*ntfs3g-0.20070102 (01 Jan 2007)

  01 Jan 2007; Patrick McLean <chutzpah@gentoo.org>
  -ntfs3g-0.20061115-r1.ebuild, +ntfs3g-0.20070102.ebuild:
  Version bump, newer version than mentioned in bump bug #159631. Clean out
  older version.

*ntfs3g-0.20061212 (13 Dec 2006)

  13 Dec 2006; Patrick McLean <chutzpah@gentoo.org>
  +ntfs3g-0.20061212.ebuild:
  Version bump. Clean up old versions.

*ntfs3g-0.20061115-r1 (20 Nov 2006)

  20 Nov 2006; Patrick McLean <chutzpah@gentoo.org>
  +ntfs3g-0.20061115-r1.ebuild: