@@ -1,3 +1,0 @@
-MD5 7c8c7a1338a0d36e315b665422e04c46 ntfs-3g-0.20070207-RC1.tgz 562786
-RMD160 3d3fbb366121b24eac39d90dde4f63309805bc4b ntfs-3g-0.20070207-RC1.tgz 562786
-SHA256 a6b26cb6bcd23aa8bfd1864f29fa2c935705c11e825ce087bc49aa35c4aa39fd ntfs-3g-0.20070207-RC1.tgz 562786
