@@ -1,0 +1,3 @@
+MD5 37d7ebe2bc393590661a36c0f96876a8 ntfs-3g-1.328.tgz 561797
+RMD160 3c90e882dfb427ce66eef7b895b3e4abb962cb12 ntfs-3g-1.328.tgz 561797
+SHA256 b3d6156d310a944b4cb7da588516621db8cf48c9d7701a41f8d093116c5c1f0b ntfs-3g-1.328.tgz 561797
